src/components/font-awesome/font-awesome.css
.icon {
  --size: 16px;

  height: var(--size);
  fill: currentColor; /** to utilize the parent text color */
  vertical-align: text-bottom; /** to align icons to the text */
}

.icon.spin {
  animation: rotate 2s linear infinite;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

